--- a/app/templates/new_show.html
+++ b/app/templates/new_show.html
@@ -5,7 +5,8 @@
     {% if show_title %}
         <h1>{{ show_title }}</h1>
         <h2>{{ date }}</h2>
-        <h2>{{ actor }}</h2>
+        <h2>{{ actors }}</h2>
+        <h2>{{ producers }}</h2>
         <p>Description:</p>
         <p>{{ description }}</p>
 
@@ -28,9 +29,16 @@
             {% endfor %}
         </p>
         <p>
-            {{ form.actor.label }}<br>
-            {{ form.actor(size=36) }}<br>
-            {% for error in form.actor.errors %}
+            {{ form.actors.label }}<br>
+            {{ form.actors(size=36) }}<br>
+            {% for error in form.actors.errors %}
+                <span style="...">[{{ error }}</span>
+            {% endfor %}
+        </p>
+        <p>
+            {{ form.producers.label }}<br>
+            {{ form.producers(size=36) }}<br>
+            {% for error in form.producers.errors %}
                 <span style="...">[{{ error }}</span>
             {% endfor %}
         </p>
