--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block content%}
+{% block app_content%}
+    <div class="jumbotron text-center">
     <h1>Hello Ithaca</h1>
-    <div>
-        <p>Find out about my favorite Shows</p>
+    </div>
+    <div class="text-center">
+        <h3>Find out about my favorite Shows!</h3>
     </div>
 {% endblock %}
