--- a/app/templates/new_show.html
+++ b/app/templates/new_show.html
@@ -1,55 +1,64 @@
 {% extends "base.html" %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content%}
-
-    {% if show_title %}
-        <h1>{{ show_title }}</h1>
-        <h2>{{ date }}</h2>
-        <h2>{{ actors }}</h2>
-        <h2>{{ producers }}</h2>
-        <p>Description:</p>
-        <p>{{ description }}</p>
-
-    {% else %}
+{% block app_content %}
     <h1>Create New Show</h1>
-    <form action = "" method="POST" novalidate>
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.show_title.label }}<br>
-            {{ form.show_title(size=36) }}<br>
-            {% for error in form.show_title.errors %}
-                <span style="...">[{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.date.label }}<br>
-            {{ form.date(size=36) }}<br>
-            {% for error in form.date.errors %}
-                <span style="...">[{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.actors.label }}<br>
-            {{ form.actors(size=36) }}<br>
-            {% for error in form.actors.errors %}
-                <span style="...">[{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.producers.label }}<br>
-            {{ form.producers(size=36) }}<br>
-            {% for error in form.producers.errors %}
-                <span style="...">[{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>
-            {{ form.description.label }}<br>
-            {{ form.description(size=36) }}<br>
-            {% for error in form.description.errors %}
-                <span style="...">[{{ error }}</span>
-            {% endfor %}
-        </p>
-        <p>{{ form.submit() }}</p>
-    </form>
-    {% endif %}
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+
+{#{% block content%}#}
+{##}
+{#    {% if show_title %}#}
+{#        <h1>{{ show_title }}</h1>#}
+{#        <h2>{{ date }}</h2>#}
+{#        <h2>{{ actors }}</h2>#}
+{#        <h2>{{ producers }}</h2>#}
+{#        <p>Description:</p>#}
+{#        <p>{{ description }}</p>#}
+{##}
+{#    {% else %}#}
+{#    <h1>Create New Show</h1>#}
+{#    <form action = "" method="POST" novalidate>#}
+{#        {{ form.hidden_tag() }}#}
+{#        <p>#}
+{#            {{ form.show_title.label }}<br>#}
+{#            {{ form.show_title(size=36) }}<br>#}
+{#            {% for error in form.show_title.errors %}#}
+{#                <span style="...">[{{ error }}</span>#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#        <p>#}
+{#            {{ form.date.label }}<br>#}
+{#            {{ form.date(size=36) }}<br>#}
+{#            {% for error in form.date.errors %}#}
+{#                <span style="...">[{{ error }}</span>#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#        <p>#}
+{#            {{ form.actors.label }}<br>#}
+{#            {{ form.actors(size=36) }}<br>#}
+{#            {% for error in form.actors.errors %}#}
+{#                <span style="...">[{{ error }}</span>#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#        <p>#}
+{#            {{ form.producers.label }}<br>#}
+{#            {{ form.producers(size=36) }}<br>#}
+{#            {% for error in form.producers.errors %}#}
+{#                <span style="...">[{{ error }}</span>#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#        <p>#}
+{#            {{ form.description.label }}<br>#}
+{#            {{ form.description(size=36) }}<br>#}
+{#            {% for error in form.description.errors %}#}
+{#                <span style="...">[{{ error }}</span>#}
+{#            {% endfor %}#}
+{#        </p>#}
+{#        <p>{{ form.submit() }}</p>#}
+{#    </form>#}
+{#    {% endif %}#}
 {% endblock %}
